Fixes an error in DumpGPU viewer when the log's name is not ProjectName.log #preflight 6459360e2d27fa25b3a3a2f4
[CL 25373783 by Guillaume Abadie in ue5-main branch]

--- a/Engine/Extras/GPUDumpViewer/GPUDumpViewer.html
+++ b/Engine/Extras/GPUDumpViewer/GPUDumpViewer.html
@@ -1392,7 +1392,7 @@ function display_cvars()
 
 function get_log_path()
 {
-	return `Base/${g_infos['Project']}.log`;
+	return `Base/${g_infos['LogFilename']}`;
 }
 
 class LogView extends IView
